# gimmi-work

./: .gitignore  .gitmodules  Makefile  README.md  config.toml  pelicanconf.py  publishconf.py  pyproject.toml  tasks.py
.github/workflows/: workflow.yml
content/: about-hugo.md  about-me.md  resume.md
content/posts/: 20240428_rcq.md  20240509_class_in_session.md  jellyfish.md  my-first-post.md  my-second-post.md  scooze_intro.md  test-github-actions-post.md
content/posts/templates/: creating-a-new-theme.md  goisforlovers.md  hugoisforlovers.md  migrate-from-jekyll.md  post-with-featured-image.md  the-figure-shortcode.md  typography.md
layouts/shortcodes/: embed-pdf.html
public/: 404.html  index.html  index.xml  sitemap.xml
public/about-hugo/: index.html
public/about-me/: index.html
public/posts/: index.html  index.xml
public/posts/creating-a-new-theme/: index.html
public/posts/goisforlovers/: index.html
public/posts/hugoisforlovers/: index.html
public/posts/jellyfish/: index.html
public/posts/migrate-from-jekyll/: index.html
public/posts/my-first-post/: index.html
public/posts/my-second-post/: index.html
public/posts/post-with-featured-image/: index.html
public/posts/scooze_intro/: index.html
public/posts/test-github-actions-post/: index.html
public/posts/the-figure-shortcode/: index.html
public/posts/typography/: index.html
public/resume/: index.html
public/tags/: index.html  index.xml
public/tags/demo/: index.html  index.xml
public/tags/development/: index.html  index.xml
static/: site.webmanifest
(+26 files in other folders)
